--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="container"></div>
     
     <!-- 引入百度地图API文件 -->
-    <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=D49Ruhf77uqpggD4H3X4Lwy7qYUGMa9G"></script>
+    <script src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=D49Ruhf77uqpggD4H3X4Lwy7qYUGMa9G"></script>
 </body>
 </html>
 
