--- a/index.html
+++ b/index.html
@@ -100,5 +100,9 @@
 	
   var point17 = new BMapGL.Point(116.38637,23.535187);
   var marker17 = new BMapGL.Marker(point17,{title:'榕江医院\r\n地址：广东省揭阳市榕城区望江北路(东湖蓝水湾北侧约100米)'});
-  map.addOverlay(marker17);	
+  map.addOverlay(marker17);
+	
+  var point18 = new BMapGL.Point(113.323457,23.072331);
+  var marker18 = new BMapGL.Marker(point18,{title:'三滘社区卫生服务站\r\n地址：广州市海珠区后滘村后滘大街2号'});
+  map.addOverlay(marker18);	
 </script>
