--- a/index.html
+++ b/index.html
@@ -104,5 +104,9 @@
 	
   var point18 = new BMapGL.Point(113.323457,23.072331);
   var marker18 = new BMapGL.Marker(point18,{title:'三滘社区卫生服务站\r\n地址：广州市海珠区后滘村后滘大街2号'});
-  map.addOverlay(marker18);	
+  map.addOverlay(marker18);
+	
+  var point19 = new BMapGL.Point(113.186294,23.097396);
+  var marker19 = new BMapGL.Marker(point19,{title:'南海区第七人民医院\r\n地址：盐步跃进路2号'});
+  map.addOverlay(marker19);	
 </script>
