--- a/index.html
+++ b/index.html
@@ -108,5 +108,9 @@
 	
   var point19 = new BMapGL.Point(113.186294,23.097396);
   var marker19 = new BMapGL.Marker(point19,{title:'南海区第七人民医院\r\n地址：盐步跃进路2号'});
-  map.addOverlay(marker19);	
+  map.addOverlay(marker19);
+	
+  var point20 = new BMapGL.Point(116.419191,23.581653);
+  var marker20 = new BMapGL.Marker(point20,{title:'揭东区中医院\r\n地址：广东省揭阳市揭东区金凤路'});
+  map.addOverlay(marker20);	
 </script>
