--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
   map.addOverlay(marker19);
 	
   var point20 = new BMapGL.Point(116.419191,23.581653);
-  var marker20 = new BMapGL.Marker(point20,{title:'揭东区中医院\r\n地址：广东省揭阳市揭东区金凤路'});
+  var marker20 = new BMapGL.Marker(point20,{title:'揭东区中医院-非GA版本\r\n地址：广东省揭阳市揭东区金凤路'});
   map.addOverlay(marker20);	
 </script>
