--- a/index.html
+++ b/index.html
@@ -112,5 +112,9 @@
 	
   var point20 = new BMapGL.Point(116.419191,23.581653);
   var marker20 = new BMapGL.Marker(point20,{title:'揭东区中医院-非GA版本\r\n地址：广东省揭阳市揭东区金凤路'});
-  map.addOverlay(marker20);	
+  map.addOverlay(marker20);
+	
+  var point21 = new BMapGL.Point(116.309417,39.673801);
+  var marker21 = new BMapGL.Marker(point21,{title:'北京景像医学检验实验室\r\n地址：北京市大兴区中关村科技园区大兴生物医药产业基地天贵街3号院6号楼1层102室'});
+  map.addOverlay(marker21);	
 </script>
