--- a/index.html
+++ b/index.html
@@ -116,5 +116,9 @@
 	
   var point21 = new BMapGL.Point(116.309417,39.673801);
   var marker21 = new BMapGL.Marker(point21,{title:'北京景像医学检验实验室\r\n地址：北京市大兴区中关村科技园区大兴生物医药产业基地天贵街3号院6号楼1层102室'});
-  map.addOverlay(marker21);	
+  map.addOverlay(marker21);
+	
+  var point22 = new BMapGL.Point(112.794,23.906886);
+  var marker22 = new BMapGL.Marker(point22,{title:'清远市清新区龙颈镇石坎卫生院\r\n地址：清远市清新区北门街与吉祥东路交叉路口往西北约130米'});
+  map.addOverlay(marker22);	
 </script>
