--- a/index.html
+++ b/index.html
@@ -120,5 +120,9 @@
 	
   var point22 = new BMapGL.Point(112.794,23.906886);
   var marker22 = new BMapGL.Marker(point22,{title:'清远市清新区龙颈镇石坎卫生院\r\n地址：清远市清新区北门街与吉祥东路交叉路口往西北约130米'});
-  map.addOverlay(marker22);	
+  map.addOverlay(marker22);
+	
+  var point23 = new BMapGL.Point(116.60178,23.266458);
+  var marker23 = new BMapGL.Marker(point23,{title:'潮阳区文光街道西门社区卫生服务站\r\n地址：广东省汕头市潮阳区棉新大道石珠园路5号'});
+  map.addOverlay(marker23);	
 </script>
