--- a/index.html
+++ b/index.html
@@ -124,5 +124,9 @@
 	
   var point23 = new BMapGL.Point(116.60178,23.266458);
   var marker23 = new BMapGL.Marker(point23,{title:'潮阳区文光街道西门社区卫生服务站\r\n地址：广东省汕头市潮阳区棉新大道石珠园路5号'});
-  map.addOverlay(marker23);	
+  map.addOverlay(marker23);
+	
+  var point24 = new BMapGL.Point(116.50703,23.390047);
+  var marker24 = new BMapGL.Marker(point24,{title:'健和综合门诊部\r\n地址：广东省汕头市潮阳区S234(潮揭路)'});
+  map.addOverlay(marker24);		
 </script>
