--- a/index.html
+++ b/index.html
@@ -128,5 +128,9 @@
 	
   var point24 = new BMapGL.Point(116.50703,23.390047);
   var marker24 = new BMapGL.Marker(point24,{title:'健和综合门诊部\r\n地址：广东省汕头市潮阳区S234(潮揭路)'});
-  map.addOverlay(marker24);		
+  map.addOverlay(marker24);	
+	
+  var point25 = new BMapGL.Point(116.362442,40.086892);
+  var marker25 = new BMapGL.Marker(point25,{title:'天使妇儿（北京）基因检测技术有限公司\r\n地址：北京市昌平区回龙观镇天龙苑29号楼9层909'});
+  map.addOverlay(marker25);	
 </script>
