--- a/index.html
+++ b/index.html
@@ -132,5 +132,9 @@
 	
   var point25 = new BMapGL.Point(116.362442,40.086892);
   var marker25 = new BMapGL.Marker(point25,{title:'天使妇儿（北京）基因检测技术有限公司\r\n地址：北京市昌平区回龙观镇天龙苑29号楼9层909'});
-  map.addOverlay(marker25);	
+  map.addOverlay(marker25);
+	
+  var point26 = new BMapGL.Point(116.731941,23.380032);
+  var marker26 = new BMapGL.Marker(point26,{title:'广东纳德医学\r\n地址：广东省汕头市龙湖区天山路34号南湖街绿园大厦103室'});
+  map.addOverlay(marker26);	
 </script>
