--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>客户地图</title>
+	
+    <!-- 网页图标 -->
+    <link rel="icon" href="favicon.ico" />	
 
     <style>
       html,body,#container {      	
