增加客户 - 医学检测

--- a/index.html
+++ b/index.html
@@ -139,5 +139,9 @@
 	
   var point26 = new BMapGL.Point(116.731941,23.380032);
   var marker26 = new BMapGL.Marker(point26,{title:'广东纳德医学\r\n地址：广东省汕头市龙湖区天山路34号南湖街绿园大厦103室'});
-  map.addOverlay(marker26);	
+  map.addOverlay(marker26);
+
+  var point27 = new BMapGL.Point(116.587254,23.47859);
+  var marker27 = new BMapGL.Marker(point27,{title:'医学检测\r\n地址：YAN总特殊客户,单位名称及地址不详'});
+  map.addOverlay(marker27);	
 </script>
