注册单位：医学检测。潮州市众诚医疗器械有限公司

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   var marker26 = new BMapGL.Marker(point26,{title:'广东纳德医学\r\n地址：广东省汕头市龙湖区天山路34号南湖街绿园大厦103室'});
   map.addOverlay(marker26);
 
-  var point27 = new BMapGL.Point(116.587254,23.47859);
-  var marker27 = new BMapGL.Marker(point27,{title:'医学检测\r\n地址：YAN总特殊客户,单位名称及地址不详'});
+  var point27 = new BMapGL.Point(116.690838,23.472421);
+  var marker27 = new BMapGL.Marker(point27,{title:'医学检测 - 潮州市众诚医疗器械有限公司\r\n地址：潮州市潮安区潮安大道兴利商业城A幢第六层B603室'});
   map.addOverlay(marker27);	
 </script>
