海珠区琶洲街琶洲社区卫生服务站

--- a/index.html
+++ b/index.html
@@ -143,5 +143,9 @@
 
   var point27 = new BMapGL.Point(116.690838,23.472421);
   var marker27 = new BMapGL.Marker(point27,{title:'医学检测 - 潮州市众诚医疗器械有限公司\r\n地址：潮州市潮安区潮安大道兴利商业城A幢第六层B603室'});
-  map.addOverlay(marker27);	
+  map.addOverlay(marker27);
+	
+  var point28 = new BMapGL.Point(113.389053,23.104709);
+  var marker28 = new BMapGL.Marker(point28,{title:'海珠区琶洲街琶洲社区卫生服务站\r\n地址：广州市海珠区新港东路10号保利广场F1'});
+  map.addOverlay(marker28);	
 </script>
