医学临床 - 名称审批中

--- a/index.html
+++ b/index.html
@@ -147,5 +147,9 @@
 	
   var point28 = new BMapGL.Point(113.389053,23.104709);
   var marker28 = new BMapGL.Marker(point28,{title:'海珠区琶洲街琶洲社区卫生服务站\r\n地址：广州市海珠区新港东路10号保利广场F1'});
-  map.addOverlay(marker28);	
+  map.addOverlay(marker28);
+	
+  var point29 = new BMapGL.Point(116.690838,23.572421);
+  var marker29 = new BMapGL.Marker(point29,{title:'医学临床\r\n地址：YAN总反馈名称在审批中'});
+  map.addOverlay(marker29);	
 </script>
