绛县仁心医院

--- a/index.html
+++ b/index.html
@@ -151,5 +151,9 @@
 	
   var point29 = new BMapGL.Point(116.690838,23.572421);
   var marker29 = new BMapGL.Marker(point29,{title:'医学临床\r\n地址：YAN总反馈名称在审批中'});
-  map.addOverlay(marker29);	
+  map.addOverlay(marker29);
+	
+  var point30 = new BMapGL.Point(111.581935,35.492767);
+  var marker30 = new BMapGL.Marker(point30,{title:'绛县仁心医院\r\n地址：山西省运城市绛县厢城东街012号'});
+  map.addOverlay(marker30);	
 </script>
