--- a/index.html
+++ b/index.html
@@ -155,5 +155,9 @@
 	
   var point30 = new BMapGL.Point(111.581935,35.492767);
   var marker30 = new BMapGL.Marker(point30,{title:'绛县仁心医院\r\n地址：山西省运城市绛县厢城东街012号'});
-  map.addOverlay(marker30);	
+  map.addOverlay(marker30);
+	
+  var point31 = new BMapGL.Point(116.417841,23.348295);
+  var marker31 = new BMapGL.Marker(point31,{title:'国仁康（谷饶）妇科诊所\r\n地址：汕头市潮阳区谷饶中学东北侧约280米'});
+  map.addOverlay(marker31);	
 </script>
