翁源翁华康复医院

--- a/index.html
+++ b/index.html
@@ -159,5 +159,9 @@
 	
   var point31 = new BMapGL.Point(116.417841,23.348295);
   var marker31 = new BMapGL.Marker(point31,{title:'国仁康（谷饶）妇科诊所\r\n地址：汕头市潮阳区谷饶中学东北侧约280米'});
-  map.addOverlay(marker31);	
+  map.addOverlay(marker31);
+
+  var point32 = new BMapGL.Point(114.11087,24.370414);
+  var marker32 = new BMapGL.Marker(point32,{title:'翁源翁华康复医院\r\n地址：广东省韶关市翁源县龙仙镇南龙寿星康乐服务中心1栋'});
+  map.addOverlay(marker32);	
 </script>
