--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
   var marker28 = new BMapGL.Marker(point28,{title:'海珠区琶洲街琶洲社区卫生服务站\r\n地址：广州市海珠区新港东路10号保利广场F1'});
   map.addOverlay(marker28);
 	
-  var point29 = new BMapGL.Point(116.690838,23.572421);
-  var marker29 = new BMapGL.Marker(point29,{title:'医学临床\r\n地址：YAN总反馈名称在审批中'});
+  var point29 = new BMapGL.Point(116.611739,23.26438);
+  var marker29 = new BMapGL.Marker(point29,{title:'康林综合门诊部\r\n地址：汕头市潮阳区亭脚路兰竹苑'});
   map.addOverlay(marker29);
 	
   var point30 = new BMapGL.Point(111.581935,35.492767);
