福建志恒电子有限公司

--- a/index.html
+++ b/index.html
@@ -163,5 +163,9 @@
 
   var point32 = new BMapGL.Point(114.11087,24.370414);
   var marker32 = new BMapGL.Marker(point32,{title:'翁源翁华康复医院\r\n地址：广东省韶关市翁源县龙仙镇南龙寿星康乐服务中心1栋'});
-  map.addOverlay(marker32);	
+  map.addOverlay(marker32);
+
+  var point33 = new BMapGL.Point(119.691376,27.048652);
+  var marker33 = new BMapGL.Marker(point33,{title:'福建志恒电子有限公司\r\n地址：福建省宁德市福安市城阳镇铁湖机电配套工业小区C-13-1号'});
+  map.addOverlay(marker33);	
 </script>
