--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   map.addOverlay(marker26);
 
   var point27 = new BMapGL.Point(116.690838,23.472421);
-  var marker27 = new BMapGL.Marker(point27,{title:'医学检测 - 潮州市众诚医疗器械有限公司\r\n地址：潮州市潮安区潮安大道兴利商业城A幢第六层B603室'});
+  var marker27 = new BMapGL.Marker(point27,{title:'医学临床 - 潮州市众诚医疗器械有限公司\r\n地址：潮州市潮安区潮安大道兴利商业城A幢第六层B603室'});
   map.addOverlay(marker27);
 	
   var point28 = new BMapGL.Point(113.389053,23.104709);
