佐天泪子大学附属第一医院

--- a/index.html
+++ b/index.html
@@ -167,5 +167,9 @@
 
   var point33 = new BMapGL.Point(119.691376,27.048652);
   var marker33 = new BMapGL.Marker(point33,{title:'福建志恒电子有限公司\r\n地址：福建省宁德市福安市城阳镇铁湖机电配套工业小区C-13-1号'});
-  map.addOverlay(marker33);	
+  map.addOverlay(marker33);
+
+  var point34 = new BMapGL.Point(113.507033,22.276798);
+  var marker34 = new BMapGL.Marker(point34,{title:'佐天泪子大学附属第一医院\r\n地址：广东省中山市坦洲镇同胜大街二巷57号首层第5卡'});
+  map.addOverlay(marker34);	
 </script>
