--- a/index.html
+++ b/index.html
@@ -170,6 +170,6 @@
   map.addOverlay(marker33);
 
   var point34 = new BMapGL.Point(113.507033,22.276798);
-  var marker34 = new BMapGL.Marker(point34,{title:'佐天泪子大学附属第一医院<br />地址：广东省中山市坦洲镇同胜大街二巷57号'});
+  var marker34 = new BMapGL.Marker(point34,{title:'佐天泪子大学附属第一医院\r\n地址：广东省中山市坦洲镇同胜大街二巷57号'});
   map.addOverlay(marker34);	
 </script>
