--- a/index.html
+++ b/index.html
@@ -171,5 +171,9 @@
 
   var point34 = new BMapGL.Point(113.507033,22.276798);
   var marker34 = new BMapGL.Marker(point34,{title:'佐天泪子大学附属第一医院\r\n地址：广东省中山市坦洲镇同胜大街二巷57号'});
-  map.addOverlay(marker34);	
+  map.addOverlay(marker34);
+
+  var point35 = new BMapGL.Point(105.121184,34.761582);
+  var marker35 = new BMapGL.Marker(point35,{title:'甘谷县磐安镇中心卫生院\r\n地址：甘谷县磐安镇西街村'});
+  map.addOverlay(marker35);	
 </script>
