--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   map.addOverlay(marker18);
 	
   var point19 = new BMapGL.Point(113.186294,23.097396);
-  var marker19 = new BMapGL.Marker(point19,{title:'南海区第七人民医院\r\n地址：盐步跃进路2号'});
+  var marker19 = new BMapGL.Marker(point19,{title:'南海区第七人民医院（盐步医院）\r\n地址：盐步跃进路2号'});
   map.addOverlay(marker19);
 	
   var point20 = new BMapGL.Point(116.419191,23.581653);
