余姚市妇幼保健院

--- a/index.html
+++ b/index.html
@@ -175,5 +175,9 @@
 
   var point35 = new BMapGL.Point(105.121184,34.761582);
   var marker35 = new BMapGL.Marker(point35,{title:'甘谷县磐安镇中心卫生院\r\n地址：甘谷县磐安镇西街村'});
-  map.addOverlay(marker35);	
+  map.addOverlay(marker35);
+
+  var point36 = new BMapGL.Point(121.129963,30.042213);
+  var marker36 = new BMapGL.Marker(point36,{title:'余姚市妇幼保健院\r\n地址：浙江省宁波市余姚市世南西路1072号'});
+  map.addOverlay(marker36);	
 </script>
