井陉县妇幼保健计划生育服务中心

--- a/index.html
+++ b/index.html
@@ -179,5 +179,9 @@
 
   var point36 = new BMapGL.Point(121.129963,30.042213);
   var marker36 = new BMapGL.Marker(point36,{title:'余姚市妇幼保健院\r\n地址：浙江省宁波市余姚市世南西路1072号'});
-  map.addOverlay(marker36);	
+  map.addOverlay(marker36);
+
+  var point37 = new BMapGL.Point(114.14726,38.037651);
+  var marker37 = new BMapGL.Marker(point37,{title:'井陉县妇幼保健计划生育服务中心\r\n地址：石家庄市井陉县幸福西街45号'});
+  map.addOverlay(marker37);	
 </script>
