保乐康妇科诊所l

--- a/index.html
+++ b/index.html
@@ -183,5 +183,9 @@
 
   var point37 = new BMapGL.Point(114.14726,38.037651);
   var marker37 = new BMapGL.Marker(point37,{title:'井陉县妇幼保健计划生育服务中心\r\n地址：石家庄市井陉县幸福西街45号'});
-  map.addOverlay(marker37);	
+  map.addOverlay(marker37);
+
+  var point38 = new BMapGL.Point(116.477778,23.256491);
+  var marker38 = new BMapGL.Marker(point38,{title:'保乐康妇科诊所\r\n地址：汕头市潮阳区和平镇中寨中港商贸城第八幢5-6号'});
+  map.addOverlay(marker38);	
 </script>
