--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   map.addOverlay(marker15);
 
   var point16 = new BMapGL.Point(110.292647,21.605427);
-  var marker16 = new BMapGL.Marker(point16,{title:'廉江市石城镇卫生院-非GA版本\r\n地址：广东省湛江市廉江市石城镇中山一路44号'});
+  var marker16 = new BMapGL.Marker(point16,{title:'廉江市石城镇卫生院\r\n地址：广东省湛江市廉江市石城镇中山一路44号'});
   map.addOverlay(marker16);
 	
   var point17 = new BMapGL.Point(116.38637,23.535187);
