鮀中综合门诊部

--- a/index.html
+++ b/index.html
@@ -187,5 +187,9 @@
 
   var point38 = new BMapGL.Point(116.477778,23.256491);
   var marker38 = new BMapGL.Marker(point38,{title:'保乐康妇科诊所\r\n地址：汕头市潮阳区和平镇中寨中港商贸城第八幢5-6号'});
-  map.addOverlay(marker38);	
+  map.addOverlay(marker38);
+	
+  var point39 = new BMapGL.Point(116.659975,23.408399);
+  var marker39 = new BMapGL.Marker(point39,{title:'鮀中综合门诊部\r\n地址：汕头市金平区鮀中路金平区第三医院南侧约220米'});
+  map.addOverlay(marker39);
 </script>
