--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
   var marker39 = new BMapGL.Marker(point39,{title:'鮀中综合门诊部\r\n地址：汕头市金平区鮀中路金平区第三医院南侧约220米'});
   map.addOverlay(marker39);
 
-  var point40 = new BMapGL.Point(118.659975,23.408399);
-  var marker40 = new BMapGL.Marker(point40,{title:'闫经理新门诊部\r\n地址：***'});
+  var point40 = new BMapGL.Point(116.74945,23.394169);
+  var marker40 = new BMapGL.Marker(point40,{title:'佳和综合门诊\r\n地址：广东省汕头市龙湖区佳和三巷1号'});
   map.addOverlay(marker40);	
 </script>
