汕头市金鉴西医内科门诊部

--- a/index.html
+++ b/index.html
@@ -195,5 +195,9 @@
 
   var point40 = new BMapGL.Point(116.74945,23.394169);
   var marker40 = new BMapGL.Marker(point40,{title:'佳和综合门诊\r\n地址：广东省汕头市龙湖区佳和三巷1号'});
-  map.addOverlay(marker40);	
+  map.addOverlay(marker40);
+
+  var point41 = new BMapGL.Point(116.762336,23.393789);
+  var marker41 = new BMapGL.Marker(point41,{title:'汕头市金鉴西医内科门诊部\r\n地址：汕头市龙湖区新津路珠津幼儿园东南侧约130米'});
+  map.addOverlay(marker41);	
 </script>
