--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         margin: 0;
       }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9EXL8X8N5M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9EXL8X8N5M');
+    </script>	
 </head>
 <body>
     <div id="container"></div>
