揭阳玉新益康

--- a/index.html
+++ b/index.html
@@ -209,5 +209,9 @@
 
   var point41 = new BMapGL.Point(116.762336,23.393789);
   var marker41 = new BMapGL.Marker(point41,{title:'汕头市金鉴西医内科门诊部\r\n地址：汕头市龙湖区新津路珠津幼儿园东南侧约130米'});
-  map.addOverlay(marker41);	
+  map.addOverlay(marker41);
+	
+  var point42 = new BMapGL.Point(116.217278,23.564997);
+  var marker42 = new BMapGL.Marker(point42,{title:'揭阳玉新益康医院\r\n地址：广东省揭阳市揭东区S234'});
+  map.addOverlay(marker42);
 </script>
