天津博寿堂中医医院

--- a/index.html
+++ b/index.html
@@ -214,4 +214,8 @@
   var point42 = new BMapGL.Point(116.217278,23.564997);
   var marker42 = new BMapGL.Marker(point42,{title:'揭阳玉新益康医院\r\n地址：广东省揭阳市揭东区S234'});
   map.addOverlay(marker42);
+	
+  var point43 = new BMapGL.Point(117.666175,39.050809);
+  var marker43 = new BMapGL.Marker(point43,{title:'天津博寿堂中医医院\r\n地址：天津市滨海新区幽州路175号'});
+  map.addOverlay(marker43);	
 </script>
