--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
   map.centerAndZoom('广州市', 7); 
   // 开启鼠标滚轮缩放
   map.enableScrollWheelZoom(true); 
-        
-        var geolocation = new BMapGL.Geolocation();
-        geolocation.getCurrentPosition(function(r){
-            if(this.getStatus() == BMAP_STATUS_SUCCESS){
-                var mk = new BMapGL.Marker(r.point);
-                map.addOverlay(mk);
-                map.panTo(r.point);
-                alert('您的位置：' + r.point.lng + ',' + r.point.lat);
-            }
-            else {
-                alert('failed' + this.getStatus());
-            }        
-        });	
+
+  // 浏览器定位 begin
+  var geolocation = new BMapGL.Geolocation();
+  geolocation.getCurrentPosition(function(r){
+    if(this.getStatus() == BMAP_STATUS_SUCCESS){
+      var mk = new BMapGL.Marker(r.point,{title:'我的位置,'+ r.point.lng + ',' + r.point.lat});
+      map.addOverlay(mk);
+    }
+    else {
+      alert('浏览器定位失败:' + this.getStatus());
+    }        
+  });	
+  // 浏览器定位 end
 
   //百度地图-拾取坐标系统 https://api.map.baidu.com/lbsapi/getpoint/index.html
   // 创建点坐标
