长江手外科医院 改名为 潮安长江医院

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   map.addOverlay(marker6);
 
   var point7 = new BMapGL.Point(116.650517,23.516088);
-  var marker7 = new BMapGL.Marker(point7,{title:'长江手外科医院\r\n地址：广东省潮州市潮安区大路顶路与233省道交叉口南100米路东'});
+  var marker7 = new BMapGL.Marker(point7,{title:'潮安长江医院\r\n地址：广东省潮州市潮安区大路顶路与233省道交叉口南100米路东'});
   map.addOverlay(marker7);
 
   var point8 = new BMapGL.Point(116.606381,23.610593);
