富顺县富世街道社区卫生服务中心

--- a/index.html
+++ b/index.html
@@ -230,5 +230,9 @@
 	
   var point43 = new BMapGL.Point(117.666175,39.050809);
   var marker43 = new BMapGL.Marker(point43,{title:'天津博寿堂中医医院\r\n地址：天津市滨海新区幽州路175号'});
-  map.addOverlay(marker43);	
+  map.addOverlay(marker43);
+	
+  var point44 = new BMapGL.Point(104.995331,29.185298);
+  var marker44 = new BMapGL.Marker(point44,{title:'富顺县富世街道社区卫生服务中心\r\n地址：四川省自贡市富顺县金山路49号'});
+  map.addOverlay(marker44);	
 </script>
