古蔺永乐永诚中医康复医院

--- a/index.html
+++ b/index.html
@@ -234,5 +234,9 @@
 	
   var point44 = new BMapGL.Point(104.995331,29.185298);
   var marker44 = new BMapGL.Marker(point44,{title:'富顺县富世街道社区卫生服务中心\r\n地址：四川省自贡市富顺县金山路49号'});
-  map.addOverlay(marker44);	
+  map.addOverlay(marker44);
+	
+  var point45 = new BMapGL.Point(105.959122,28.101793);
+  var marker45 = new BMapGL.Marker(point45,{title:'古蔺永乐永诚中医康复医院\r\n地址：泸州市古蔺县永乐街道放心购物广场东北侧'});
+  map.addOverlay(marker45);	
 </script>
