古蔺永乐永诚中医康复医院未付款，取消。修改为【徐州市云龙区潘塘社区卫生服务中心】

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   var marker44 = new BMapGL.Marker(point44,{title:'富顺县富世街道社区卫生服务中心\r\n地址：四川省自贡市富顺县金山路49号'});
   map.addOverlay(marker44);
 	
-  var point45 = new BMapGL.Point(105.959122,28.101793);
-  var marker45 = new BMapGL.Marker(point45,{title:'古蔺永乐永诚中医康复医院\r\n地址：泸州市古蔺县永乐街道放心购物广场东北侧'});
+  var point45 = new BMapGL.Point(117.271951,34.182265);
+  var marker45 = new BMapGL.Marker(point45,{title:'徐州市云龙区潘塘社区卫生服务中心\r\n地址：江苏省徐州市云龙区大龙湖办事处惠民花园三期'});
   map.addOverlay(marker45);	
 </script>
