--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
   var marker29 = new BMapGL.Marker(point29,{title:'康林综合门诊部\r\n地址：汕头市潮阳区亭脚路兰竹苑'});
   map.addOverlay(marker29);
 	
-  var point30 = new BMapGL.Point(111.581935,35.492767);
-  var marker30 = new BMapGL.Marker(point30,{title:'绛县仁心医院\r\n地址：山西省运城市绛县厢城东街012号'});
+  var point30 = new BMapGL.Point(105.959122,28.101793);
+  var marker30 = new BMapGL.Marker(point30,{title:'古蔺永乐永诚中医康复医院\r\n地址：泸州市古蔺县永乐街道放心购物广场东北侧'});
   map.addOverlay(marker30);
 	
   var point31 = new BMapGL.Point(116.417841,23.348295);
