潮阳区扬帆综合门诊部

--- a/index.html
+++ b/index.html
@@ -239,4 +239,8 @@
   var point45 = new BMapGL.Point(117.271951,34.182265);
   var marker45 = new BMapGL.Marker(point45,{title:'徐州市云龙区潘塘社区卫生服务中心\r\n地址：江苏省徐州市云龙区大龙湖办事处惠民花园三期'});
   map.addOverlay(marker45);	
+	
+  var point46 = new BMapGL.Point(116.605061,23.273942);
+  var marker46 = new BMapGL.Marker(point46,{title:'潮阳区扬帆综合门诊部\r\n地址：广东省汕头市潮阳区北关路224号'});
+  map.addOverlay(marker46);	
 </script>
