福建福鼎唯建自动化设备制造有限公司

--- a/index.html
+++ b/index.html
@@ -242,5 +242,9 @@
 	
   var point46 = new BMapGL.Point(116.605061,23.273942);
   var marker46 = new BMapGL.Marker(point46,{title:'潮阳区扬帆综合门诊部\r\n地址：广东省汕头市潮阳区北关路224号'});
-  map.addOverlay(marker46);	
+  map.addOverlay(marker46);
+	
+  var point47 = new BMapGL.Point(120.283531,27.310489);
+  var marker47 = new BMapGL.Marker(point47,{title:'福建福鼎唯建自动化设备制造有限公司\r\n地址：福建省宁德市福鼎市山前街道双岳工业区鼎盛路6号'});
+  map.addOverlay(marker47);	
 </script>
