平江县虹桥镇中心卫生院

--- a/index.html
+++ b/index.html
@@ -246,5 +246,9 @@
 	
   var point47 = new BMapGL.Point(120.283531,27.310489);
   var marker47 = new BMapGL.Marker(point47,{title:'福建福鼎唯建自动化设备制造有限公司\r\n地址：福建省宁德市福鼎市山前街道双岳工业区鼎盛路6号'});
-  map.addOverlay(marker47);	
+  map.addOverlay(marker47);
+
+  var point48 = new BMapGL.Point(113.889586,28.930242);
+  var marker48 = new BMapGL.Marker(point48,{title:'平江县虹桥镇中心卫生院\r\n地址：湖南省岳阳市平江县虹桥镇X001'});
+  map.addOverlay(marker48);	
 </script>
