御安堂中医门诊部

--- a/index.html
+++ b/index.html
@@ -250,5 +250,9 @@
 
   var point48 = new BMapGL.Point(113.889586,28.930242);
   var marker48 = new BMapGL.Marker(point48,{title:'平江县虹桥镇中心卫生院\r\n地址：湖南省岳阳市平江县虹桥镇X001'});
-  map.addOverlay(marker48);	
+  map.addOverlay(marker48);
+
+  var point49 = new BMapGL.Point(116.751187,23.361315);
+  var marker49 = new BMapGL.Marker(point49,{title:'御安堂中医门诊部\r\n地址：广东省汕头市龙湖区黄山路111~115号'});
+  map.addOverlay(marker49);	
 </script>
