【汕头市纳德综合门诊部】改为【汕头市洪德综合门诊部】

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   map.addOverlay(marker25);
 	
   var point26 = new BMapGL.Point(116.731941,23.380032);
-  var marker26 = new BMapGL.Marker(point26,{title:'汕头市纳德综合门诊\r\n地址：广东省汕头市龙湖区天山路34号南湖街绿园大厦103室'});
+  var marker26 = new BMapGL.Marker(point26,{title:'汕头市洪德综合门诊\r\n地址：广东省汕头市龙湖区天山路34号南湖街绿园大厦103室'});
   map.addOverlay(marker26);
 
   var point27 = new BMapGL.Point(116.690838,23.472421);
