宁夏中健骨科医院

--- a/index.html
+++ b/index.html
@@ -254,5 +254,9 @@
 
   var point49 = new BMapGL.Point(116.751187,23.361315);
   var marker49 = new BMapGL.Marker(point49,{title:'御安堂中医门诊部\r\n地址：广东省汕头市龙湖区黄山路111~115号'});
-  map.addOverlay(marker49);	
+  map.addOverlay(marker49);
+
+  var point50 = new BMapGL.Point(106.539079,38.921143);
+  var marker50 = new BMapGL.Marker(point50,{title:'宁夏中健骨科医院\r\n地址：石嘴山市平罗县萧公大街89号'});
+  map.addOverlay(marker50);	
 </script>
