--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
   var marker47 = new BMapGL.Marker(point47,{title:'福建福鼎唯建自动化设备制造有限公司\r\n地址：福建省宁德市福鼎市山前街道双岳工业区鼎盛路6号'});
   map.addOverlay(marker47);
 
-  var point48 = new BMapGL.Point(113.889586,28.930242);
-  var marker48 = new BMapGL.Marker(point48,{title:'平江县虹桥镇中心卫生院\r\n地址：湖南省岳阳市平江县虹桥镇X001'});
+  var point48 = new BMapGL.Point(116.719776,23.402288);
+  var marker48 = new BMapGL.Marker(point48,{title:'正好福东中西医结合门诊部\r\n地址：广东省汕头市金平区广厦街道金新北路150号东裕园257幢房'});
   map.addOverlay(marker48);
 
   var point49 = new BMapGL.Point(116.751187,23.361315);
