--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   map.addOverlay(marker16);
 	
   var point17 = new BMapGL.Point(116.38637,23.535187);
-  var marker17 = new BMapGL.Marker(point17,{title:'榕江医院\r\n地址：广东省揭阳市榕城区望江北路(东湖蓝水湾北侧约100米)'});
+  var marker17 = new BMapGL.Marker(point17,{title:'揭阳杨永文中医医院\r\n地址：广东省揭阳市榕城区望江北路(东湖蓝水湾北侧约100米)'});
   map.addOverlay(marker17);
 	
   var point18 = new BMapGL.Point(113.323457,23.072331);
