黎守球诊所 改为 乌兰察布市中心医院

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   var marker4 = new BMapGL.Marker(point4,{title:'寨岗中心卫生院\r\n地址：广东省清远市连南瑶族自治县跃进街3楼'});
   map.addOverlay(marker4);
 
-  var point5 = new BMapGL.Point(113.137631,24.266246);
-  var marker5 = new BMapGL.Marker(point5,{title:'黎守球诊所\r\n地址：清远市英德市人民东路新城花园南侧约100米'});
+  var point5 = new BMapGL.Point(113.121167,41.036344);
+  var marker5 = new BMapGL.Marker(point5,{title:'乌兰察布市中心医院\r\n地址：内蒙古自治区乌兰察布市集宁区解放大街157号'});
   map.addOverlay(marker5);
 
   var point6 = new BMapGL.Point(110.169338,20.329345);
