广州市海珠区官洲街北山社区卫生服务站

--- a/index.html
+++ b/index.html
@@ -259,4 +259,8 @@
   var point50 = new BMapGL.Point(106.539079,38.921143);
   var marker50 = new BMapGL.Marker(point50,{title:'宁夏中健骨科医院\r\n地址：石嘴山市平罗县萧公大街89号'});
   map.addOverlay(marker50);	
+	
+  var point51 = new BMapGL.Point(113.37674,23.088989);
+  var marker51 = new BMapGL.Marker(point51,{title:'广州市海珠区官洲街北山社区卫生服务站\r\n地址：广州市海珠区官洲街北山村北山大街7号'});
+  map.addOverlay(marker51);
 </script>
