--- a/index.html
+++ b/index.html
@@ -263,4 +263,8 @@
   var point51 = new BMapGL.Point(113.37674,23.088989);
   var marker51 = new BMapGL.Marker(point51,{title:'广州市海珠区官洲街北山社区卫生服务站\r\n地址：广州市海珠区官洲街北山村北山大街7号'});
   map.addOverlay(marker51);
+	
+  var point52 = new BMapGL.Point(113.335124,23.156984);
+  var marker52 = new BMapGL.Marker(point52,{title:'轻雅医疗美容(瘦狗岭路店)\r\n地址：广州市天河区林和街瘦狗岭路313号B102房'});
+  map.addOverlay(marker52);	
 </script>
