--- a/index.html
+++ b/index.html
@@ -267,4 +267,8 @@
   var point52 = new BMapGL.Point(113.335124,23.156984);
   var marker52 = new BMapGL.Marker(point52,{title:'轻雅医疗美容(瘦狗岭路店)\r\n地址：广州市天河区林和街瘦狗岭路313号B102房'});
   map.addOverlay(marker52);	
+	
+  var point53 = new BMapGL.Point(109.027048,32.688212);
+  var marker53 = new BMapGL.Marker(point53,{title:'汉滨区中医医院\r\n地址：安康市汉滨区果园路10号'});
+  map.addOverlay(marker53);		
 </script>
